# planeturem

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  binary_license.txt
art-designs/: animal-designs.aseprite  bush-design.aseprite  dungeon-design.aseprite  entities.aseprite  monkey-design.aseprite  rock-design.aseprite  sand-serpent.aseprite  ship-design.aseprite  soldier-design.aseprite  tool-designs.aseprite  tree-design.aseprite  yeti-walk-anim-design.aseprite
art-designs/achievements/: achievement-base.aseprite
art-designs/steam-art/: main-capsule.aseprite  trailer.mlt
assets/: flash.frag  lighting.frag  water.frag
assets/Info/: armour.data  build_recipes.data  entities.data  entity_data.data  item_data.data  item_recipes.data  items.data  object_data.data  objects.data  planet_generation.data  structures.data  tool_data.data  tools.data
assets/Shaders/: blur.frag  cliff.frag  default.vert  default_no_texture.frag  flash.frag  lighting.frag  minimap.frag  progress.frag  progress_circle.frag  replace_colour.frag  tilemap.vert  tree.frag  water.frag
docs/: chunk.md  game-data.md  game-saves.md  immediate-gui.md  lighting.md  networking.md
enc_temp_folder/f0e812e511bc93dc2504322ed117c7/: Game.cpp
enc_temp_folder/ffd5bb1737253767ce64803327cf75f4/: Game.cpp
icon/: compile-icon.bat
include/: BuildRecipes.hpp  Camera.hpp  Chunk.hpp  ChunkManager.hpp  ChunkPosition.hpp  DebugOptions.hpp  Game.hpp  GameConstants.hpp  Inventory.hpp  ItemType.hpp  ObjectType.hpp  Shaders.hpp  TextDraw.hpp  TextureManager.hpp  TextureType.hpp  TileType.hpp
include/Core/: AnimatedTexture.hpp  Camera.hpp  CollisionCircle.hpp  CollisionRect.hpp  Helper.hpp  InputManager.hpp  Random.hpp  ResolutionHandler.hpp  Shaders.hpp  Sounds.hpp  SpriteBatch.hpp  TextDraw.hpp  TextureManager.hpp  Tween.hpp
include/Data/: ArmourData.hpp  ArmourDataLoader.hpp  BuildRecipe.hpp  BuildRecipeLoader.hpp  BuildRecipes.hpp  EntityData.hpp  EntityDataLoader.hpp  FurnaceRecipeLoader.hpp  ItemData.hpp  ItemDataLoader.hpp  ItemDrop.hpp  ObjectData.hpp  ObjectDataLoader.hpp  PlanetGenData.hpp  PlanetGenDataLoader.hpp  PlanetGenerationData.hpp  RecipeData.hpp  RecipeDataLoader.hpp  StructureData.hpp  StructureDataLoader.hpp  ToolData.hpp  ToolDataLoader.hpp  typedefs.hpp
include/Entity/: Entity.hpp  EntityPOD.hpp  HitRect.hpp
include/GUI/: BuildGUI.hpp  ChatGUI.hpp  DefaultGUIPanel.hpp  DemoEndGUI.hpp  FurnaceGUI.hpp  GUIDraw.hpp  HealthGUI.hpp  HitMarkers.hpp  InventoryGUI.hpp  ItemSlot.hpp  LandmarkSetGUI.hpp  MainMenuGUI.hpp  NPCInteractionGUI.hpp  TravelSelectGUI.hpp  WorldMapGUI.hpp
include/IO/: CompressedData.hpp  GameSaveIO.hpp  Log.hpp
include/Network/: CompactFloat.hpp  IPacketData.hpp  IPacketTimeDependent.hpp  NetworkHandler.hpp  Packet.hpp  PacketDataChestClosed.hpp  PacketDataChestDataModified.hpp  PacketDataChestOpened.hpp  PacketDataChunkDatas.hpp  PacketDataChunkRequests.hpp  PacketDataItemPickupDeleted.hpp  PacketDataItemPickupsCreateRequest.hpp  PacketDataItemPickupsCreated.hpp  PacketDataJoinInfo.hpp  PacketDataJoinReply.hpp  PacketDataObjectBuilt.hpp  PacketDataObjectDestroyed.hpp  PacketDataObjectHit.hpp  PacketDataObjectPlaced.hpp  PacketDataPlanetTravelReply.hpp  PacketDataPlanetTravelRequest.hpp  PacketDataPlayerCharacterInfo.hpp  PacketDataPlayerInfo.hpp  PacketDataWorldInfo.hpp  PacketType.hpp
include/Object/: BuildableObject.hpp  BuildableObjectFactory.hpp  BuildableObjectPOD.hpp  Bush.hpp  ChestObject.hpp  LandmarkObject.hpp  NPCObject.hpp  ObjectBuilder.hpp  ObjectReference.hpp  OccupiedTileObject.hpp  ParticleSystem.hpp  PlantObject.hpp  Player.hpp  RocketObject.hpp  SpawnPointObject.hpp  StructureObject.hpp  StructureObjectPOD.hpp  Tree.hpp  WoodFloor.hpp  WoodWall.hpp  WorldObject.hpp
include/Player/: Achievements.hpp  Cursor.hpp  FurnaceJob.hpp  Inventory.hpp  InventoryData.hpp  ItemPickup.hpp  LocationState.hpp  NetworkPlayer.hpp  Player.hpp  PlayerData.hpp  PlayerStats.hpp  ShopInventoryData.hpp  SmeltingJobData.hpp
include/Types/: GameState.hpp  ItemType.hpp  ObjectType.hpp  TextureType.hpp  TileType.hpp  WorldMenuState.hpp
include/World/: ChestDataPool.hpp  Chunk.hpp  ChunkManager.hpp  ChunkPOD.hpp  ChunkPosition.hpp  ChunkViewRange.hpp  DayCycleManager.hpp  FastNoise.h  LandmarkManager.hpp  LightingEngine.hpp  PathfindingEngine.hpp  Room.hpp  RoomDestinationData.hpp  RoomDestinationManager.hpp  RoomPool.hpp  TileMap.hpp  WeatherSystem.hpp  WorldData.hpp  WorldMap.hpp
sound-design/: animal-hit.aup3  night theme 1.flp  world theme 2.flp
sound-design/Backup/: night theme 1 (autosaved at 16h46).flp  night theme 1 (overwritten at 17h04).flp  night theme 1 (overwritten at 17h04)_2.flp  night theme 1 (overwritten at 17h10).flp  world theme 2 (autosaved at 11h15).flp  world theme 2 (autosaved at 11h55).flp  world theme 2 (autosaved at 14h39).flp  world theme 2 (autosaved at 14h50).flp  world theme 2 (autosaved at 15h00).flp  world theme 2 (autosaved at 15h10).flp  world theme 2 (autosaved at 15h36).flp  world theme 2 (autosaved at 18h17).flp  world theme 2 (autosaved at 22h01).flp  world theme 2 (overwritten at 11h59).flp  world theme 2 (overwritten at 15h19).flp  world theme 2 (overwritten at 15h26).flp  world theme 2 (overwritten at 15h42).flp  world theme 2 (overwritten at 15h43).flp  world theme 2 (overwritten at 15h44).flp  world theme 2 (overwritten at 15h48).flp  world theme 2 (overwritten at 15h51).flp  world theme 2 (overwritten at 17h07).flp  world theme 2 (overwritten at 18h18).flp  world theme 2 (overwritten at 18h25).flp  world theme 2 (overwritten at 21h51).flp  world theme 2 (overwritten at 22h10).flp  world theme 2 (overwritten at 22h15).flp
sound-design/first boss/: first boss.flp
sound-design/first tune/: first tune.flp
sound-design/night theme maybe/: night theme maybe.flp
sound-design/second boss/: first boss.flp
src/: Camera.cpp  Chunk.cpp  ChunkManager.cpp  DebugOptions.cpp  Game.cpp  Inventory.cpp  Shaders.cpp  TextDraw.cpp  TextureManager.cpp  main.cpp
src/Core/: AnimatedTexture.cpp  Camera.cpp  CollisionCircle.cpp  (+9 more)
(+197 files in other folders)
